# openalex-ingest

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  working.ipynb
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
openalex_ingest/: common.py  staging.py
openalex_ingest/provider/: ror.py
