[project]
name = "openalex-ingest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "boto3>=1.35.63",
    "pandas>=2.2.3",
    "psycopg2-binary==2.9.10",
    "requests>=2.32.3",
    "shortuuid>=1.0.13",
    "sickle>=0.7.0",
    "sqlalchemy>=2.0.36",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.1",
    "fastparquet>=2024.11.0",
    "s3fs>=0.4.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build]
include = [
    "openalex_ingest/**",
    "README.md",
]